s/Continue to overview/Continue to the project overview/
The link text is "Continue to the project overview." in OpenShift 3.11.43

--- a/nationalparks-java.adoc
+++ b/nationalparks-java.adoc
@@ -138,7 +138,7 @@ We will again set 3 labels to the deployment.
 
 image::nationalparks-configure-service-labels.png[Adding labels]
 
-You can then hit the button labeled *"Create"*. Then click *Continue to
+You can then hit the button labeled *"Create"*. Then click *Continue to the project
 overview* and toggle the *>* icon next to the deployment config for `nationalparks` . You will see the build log output directly there.
 
 image::nationalparks-java-new-java-build.png[Nationalparks build]
