--- a/parksmap-logging.adoc
+++ b/parksmap-logging.adoc
@@ -112,17 +112,21 @@ The "View Archive" link that you clicked takes you to a default view with a spec
 pre-populated. Kibana will only show you logs where the pod name is
 `parksmap-1-hx0kv` and in the *Project* (namespace) {{ USER_PROJECT }}.
 
-CAUTION: In the following command(s), replace `{{ USER_PROJECT }}` with the project provided to you and the pod_name to match your pod.
+CAUTION: In the following Kibana search(es), replace `{{ USER_PROJECT }}` with the project provided to you and the pod_name to match your pod.
 
 [source,bash,role=copypaste]
 ----
 kubernetes.pod_name:"parksmap-1-hx0kv" AND kubernetes.namespace_name:"{{ USER_PROJECT }}"
 ----
 
+[NOTE]
+====
+If your search returns no hits, try changing the time-picker in the top right-hand corner from the default "Last 15 miutes" to something else, like "The day so far" or "Last 1 hour"
+====
 If you want to see all the historical logs for this *Project*, simply remove the
 pod name reference and click the magnifying glass or press the enter key.
 
-CAUTION: In the following command(s), replace `{{ USER_PROJECT }}` with the project provided to you.
+CAUTION: In the following Kibana search(es), replace `{{ USER_PROJECT }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
@@ -138,7 +142,7 @@ image::parksmap-logging-kibana-parksmap-headers.png[Kibana Interface]
 
 Try the following search string ensuring that you use the correct name for your project:
 
-CAUTION: In the following command(s), replace `{{ USER_PROJECT }}` with the project provided to you.
+CAUTION: In the following Kibana search(es), replace `{{ USER_PROJECT }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
