--- a/common-environment.adoc
+++ b/common-environment.adoc
@@ -1,11 +1,11 @@
 image::common-environment-ocp-architecture.png[OCP Architecture]
 
-You will be interacting with an OpenShift environment that is running on a 
+You will be interacting with an OpenShift environment that is running on a
 public cloud. The environment consists of the following systems:
 
 * {{ ENV_MASTERS }} master node(s)
 * {{ ENV_INFRA }} infrastructure node(s)
-* {{ ENV_NODES }} "application" nodes
+* {{ ENV_NODES }} application nodes
 * An NFS server
 
 The infrastructure node is providing several services:
@@ -24,7 +24,7 @@ Before continuing, please visit visit the Etherpad at the following URL:
 http://etherpad-{{ INFRA_PROJECT }}.{{ ROUTER_ADDRESS }}/p/workshop
 ----
 
-Decide on a user account among one of the available users or use 
+Decide on a user account among one of the available users or use
 the one that has been assigned to you by the instructor. Find that user
 account and type your name next to it. This will be your user account for the
 duration of these exercises. For example:
@@ -33,14 +33,16 @@ duration of these exercises. For example:
 {{ USER_NAME }}=Luke Skywalker
 ----
 
-If you already see a name next to a user account, it means that someone 
+If you already see a name next to a user account, it means that someone
 else has already claimed it.
 
-You will see various code and command blocks throughout these exercises. 
-Some of the command blocks can be copy/pasted directly. Others will require 
-modification of the command before execution. If you see a command block with 
-a red border (see below), the command will require modification. Typically 
+You will see various code and command blocks throughout these exercises.
+Some of the command blocks can be copy/pasted directly. Others will require
+modification of the command before execution. If you see a command block with
+a red border (see below), the command will require modification. Typically
 this is a substitution of your username or user number:
+
+CAUTION: In the following Kibana search(es), replace `{{ USER_PROJECT }}` with the project provided to you and the pod_name to match your pod.
 
 [source,role=copypaste]
 ----
