--- a/common-parksmap-architecture.adoc
+++ b/common-parksmap-architecture.adoc
@@ -1,8 +1,8 @@
-This lab introduces you to the architecture of the ParksMap application used throughout this workshop, to get a better understanding of the things you'll be doing from a developer perspective. ParksMap is a polyglot geo-spatial data visualization application built using the microservices architecture and is composed of a set of services which are developed using different programming languages and frameworks.
+This lab introduces you to the architecture of the ParksMap application used throughout this workshop. This will help you get a better understanding of the things you'll be doing from a developer perspective. ParksMap is a polyglot, geo-spatial data visualization application built using a microservice architecture and is composed of a set of services that are developed using different programming languages and frameworks.
 
 image::roadshow-app-architecture.png[Application architecture,800,align="center"]
 
-The main service is a web application which has a server-side component in charge of aggregating the geo-spatial APIs provided by multiple independent backend services and a client-side component in JavaScript that is responsible for visualizing the geo-spatial data on the map. The client-side component which runs in your browser communicates with the server-side via WebSockets protocol in order to update the map in real-time.
+The main service is a web application which has a server-side component in charge of aggregating the geo-spatial APIs provided by multiple independent backend services and a client-side component in JavaScript that is responsible for visualizing the geo-spatial data on the map. The client-side component, which runs in your browser, communicates with the server-side via the WebSockets protocol in order to update the map in real-time.
 
 There will be a set of independent backend services deployed that will provide different mapping and geo-spatial information. The set of available backend services that provide geo-spatial information are:
 
@@ -14,4 +14,4 @@ There will be a set of independent backend services deployed that will provide d
 
 The original source code for this application is located link:https://github.com/openshift-roadshow/[here].
 
-The server-side component of the ParksMap web application acts as a communication gateway to all the available backends. These backends will be dynamically discovered by using service discovery mechanisms provided by OpenShift which will be discussed in more details in the following labs.
+The server-side component of the ParksMap web application acts as a communication gateway to all the available backends. These backends will be dynamically discovered by using service discovery mechanisms provided by OpenShift which will be discussed in greater detail in the upcoming labs.
